# ftl-doc-agent

./: README.md  pyproject.toml
ftl_doc_agent/: Gradio_UI.py  cli.py  cli2.py  cli3.py  codegen.py  core.py  default_tools.py  tools.py  util.py
ftl_pytest_agent/: __init__.py  agents.py  default_tools.py  ui.py
tests/: _function_type_hints_utils.py  test_parse_doc.py  test_parse_docstring.py  test_redbaron.py
