[project]
name = "ftl-doc-agent"
version = "0.1.2"
dependencies = [
    "smolagents[litellm]==1.9.2",
    "faster_than_light",
    "gradio",
    "black",
    "pytest",
    "coverage",
    "redbaron",
]

[tool.setuptools]
packages = ["ftl_doc_agent", "ftl_doc_agent.prompts"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ftl-doc-agent = "ftl_doc_agent.cli:main"
ftl-doc-agent-ui = "ftl_doc_agent.ui:main"
ftl-doc-agent2 = "ftl_doc_agent.cli2:main"

[tool.setuptools.package-data]
"ftl_doc_agent.prompts" = ["*.yaml"]

